# cha

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: settings.yml
.github/workflows/: build.yml  clangformat.yml  coverage.yml  lint.yml
examples/: test.cha  test.ni  unary_demo.cha
include/ast/: ast.hh  location.hh  parser.hh  parserdecl.h  tokenizer.hh  validator.hh
include/cha/: cha.h  cha.hpp
include/codegen/: asm_codegen.hh  asmcodegen.hh  att_printer.hh  attprinter.hh  codegen.hh  ir_printer.hh  memory_calculator.hh  memorycalculator.hh
include/codegen/assembly/: asm_codegen.hh  att_printer.hh
include/codegen/ir/: ir_codegen.hh  ir_printer.hh
include/ni/: ast.h  ast_dump.h  codegen.h  ni.h  parser.h  validate.h
include/ni/ast/: location.hh  visitor.hh
include/ni/codegen/: codegen.hh  context.hh  memory_calculator.hh
include/ni/codegen/assembly/: asm_codegen.hh  asm_common.hh  att_printer.hh
include/ni/codegen/ir/: ir_codegen.hh  ir_common.hh  ir_printer.hh
include/ni/codegen/llvmir/: llvmir_codegen.hh
include/ni/parse/: syntax_parser.hh
include/nic/: codegen.h  validate.h
include/parse/: parserdecl.h  syntax_parser.hh
ni/: CMakeLists.txt
ni/src/include/parse/: parserdecl.h
ni/src/parse/: parserdecl.h  syntax_parser.cpp
ni/test/ast/: validation_arg_dup.cpp  validation_arg_mismatch.cpp  validation_arg_mismatch2.cpp  validation_dup_function.cpp  validation_function_not_found.cpp  validation_passes.cpp  validation_var_not_found.cpp  validation_var_redefined.cpp  validation_var_redefined2.cpp
ni/test/lib/: test.cpp
ni/test/parse/: parse_failure.cpp  parse_success.cpp
nic/: CMakeLists.txt
nic/include/nic/: ast.h  ast_dump.h  codegen.h  validate.h
nic/src/: ast.c  ast_dump.c  codegen.c  log.c  log.h  main.c  parser.y  scanner.l  symbol_table.c  symbol_table.h  validate.c
nic/test/: parse_failure.ni  test.c  validation_arg_dup.ni  validation_function_not_found.ni  validation_var_redefined2.ni
scripts/: test.sh
src/: asmcodegen.cpp  ast.c  ast.cpp  ast.h  ast.hh  ast.hpp  ast_dump.c  cha.c  cha.cpp  codegen.c  codegen.cpp  codegen.cpp.bak  codegen.h  codegen.hh  codegen.hpp  exceptions.hpp  llvmcodegen.cpp  log.c  log.cpp  log.h  log.hpp  main.c  main.cpp  ni.c  nodes.cpp  nodes.h  nodes.hh  parser.h  parser.hpp  parser.l  parser.y  parser.yy  parserdecl.h  scanner.l  symbol_table.c  symbol_table.h  validate.c  validate.cpp  validate.h  validate.hpp
src/ast/: ast.cpp  parser.cpp  parser.l  parser.yy  tokenizer.cpp  validation.cpp  visitor.cpp
src/codegen/: asm_codegen.cpp  asmcodegen.cpp  att_printer.cpp  attprinter.cpp  codegen.cpp  context.cpp  ir_printer.cpp  memory_calculator.cpp  memorycalculator.cpp
src/codegen/asm/: att_printer.cpp
src/codegen/assembly/: asm_codegen.cpp  asm_common.cpp  att_printer.cpp
src/codegen/ir/: ir_codegen.cpp  ir_printer.cpp
src/codegen/llvmir/: llvmir_codegen.cpp
src/parse/: parser.l  parser.yy  syntax_parser.cpp
test/: if_condition_not_bool.cha  if_else_passes.ni  if_passes.ni  operator_passes.cha  parse_passes.ni  test.c  type_assign_passes.ni  validation_arg_mismatch3.ni  validation_dup_function.cha  validation_passes.ni  validation_ret_mismatch.ni  validation_type_mismatch.ni  validation_type_mismatch2.ni  validation_types_overflow.ni  validation_var_not_found.cha
test/ast/: parse_test.cpp  tokenizer_test.cpp  validation_arg_mismatch.cpp  validation_arg_mismatch.ni  validation_dup_function.cpp  validation_passes.cpp  validation_test.cpp  validation_var_not_found.cpp  validation_var_redefined.cpp
test/codegen/: attprinter_test.cc  attprinter_test.cpp  ir_printer_test.cpp  memorycalculator_nomemory.cpp  memorycalculator_one_arg.cpp  memorycalculator_one_arg.ni  memorycalculator_one_arg_one_var.cpp  memorycalculator_one_arg_one_var.ni  memorycalculator_one_var.cpp  memorycalculator_one_var.ni  memorycalculator_test.cpp
test/codegen/assembly/: attprinter_linux.cpp  attprinter_linux.s  attprinter_mac.cpp  attprinter_mac.s  attprinter_test.cpp
test/codegen/ir/: ir_printer.cpp  ir_printer.ir  ir_printer_test.cpp
test/include/test/: test.hh
test/integration/: parse_passes.cha  test.c  test_integration.cpp  type_assign_passes.cha  unary_negate.cha  unary_negate_bool_error.cha  unary_negate_float.cha  unary_not.cha  unary_not_int_error.cha  validation_arg_mismatch2.cha  validation_arg_mismatch3.cha  validation_type_mismatch2.cha  validation_var_redefined.cha
test/lib/: test.cpp
test/parse/: parse_success.cpp  parse_test.cpp
test/unit/: test_ast.cpp  test_ast_cpp.cpp  test_parser.cpp  test_parser_cpp.cpp  test_validate.cpp  test_validate_cpp.cpp
